<resources>
    <string name="app_name">DogApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_started_welcome_message">Hello, this is an adoption application. Feel free to join!!</string>
    <string name="get_started_button_message">Get started</string>
    <string name="get_started_title_message">Adopcion de perritos</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="navigation_drawer_open">"Abrir"</string>
    <string name="navigation_drawer_close">"Cerrar"</string>
    <string name="setting_title">"Configuracion"</string>
    <string name="setting_modo_label">"Modo oscuro"</string>
    <string name="profile_title">"Datos de perfil"</string>
    <string name="profile_button_photo">"Subir foto"</string>
    <string name="profile_url_photo">"Ingrese URL"</string>
    <string name="profile_url_photo_title">"Cambiar foto"</string>
    <string name="profile_url_photo_accept">"Aceptar"</string>
    <string name="profile_url_photo_cancel">"Cancelar"</string>
    <string name="publi_name_input">"Ingrese nombre.."</string>
    <string name="publi_age_input">"Ingrese edad.."</string>
    <string name="publi_weigth_input">"Ingrese peso.."</string>
    <string name="publi_phone_input">"Ingrese telefono.."</string>
    <string name="publi_gender_input">"Sexo"</string>
    <string name="publi_title_input">"Información perro"</string>
    <string name="publi_breed_input">"Raza"</string>
    <string name="publi_breed_button">"Publicar"</string>
    <string name="no_dogs_message">"No hay perritos para mostrar"</string>
    <string name="card_favorite_switch">"Favorito"</string>
    <string name="detail_button">"Adoptar"</string>
    <string name="detail_button_back">"Volver"</string>
    <string name="detail_description">"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised"</string>
</resources>