<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout6"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#DDE9EA"
    android:backgroundTint="#DDE9EA"
    tools:context=".ui.fragments.PhotoFormFragment">

    <TextView
        android:id="@+id/settingsTitleId3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsblack"
        android:text="@string/profile_url_photo_title"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/urlPhotoId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.222" />

    <EditText
        android:id="@+id/urlPhotoId"
        android:layout_width="292dp"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="108dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/background_radius"
        android:backgroundTint="@color/white"
        android:hint="@string/profile_url_photo"
        android:importantForAutofill="no"
        android:textAlignment="center"
        android:textColorHint="@color/gris"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/photoButtonCancelId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/gris"
        android:text="@string/profile_url_photo_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/urlPhotoId"
        app:rippleColor="@color/gris" />

    <Button
        android:id="@+id/photoButtonAcceptId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/green"
        android:text="@string/profile_url_photo_accept"
        app:layout_constraintEnd_toStartOf="@+id/photoButtonCancelId"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/urlPhotoId"
        app:rippleColor="@color/green" />

</androidx.constraintlayout.widget.ConstraintLayout>